# ZeroCode

./: .env.template  .gitignore  LICENSE  README.md  langgraph.json  pyproject.toml
.cursor/rules/: fastapi-pydantic.mdc  next-js-shadcn.mdc
evaluation/: evaluate.py  scorer.py
evaluaton/gaia/: run_infer.py
examples/indexer/: graph.py
examples/retriever/: store.py
src/: run_agent.py  run_service.py  utils.py
src/client/: client.py
src/core/: llm.py
src/deep_research/: configuration.py  graph.py  main.py  state.py  utils.py
src/mcp/: graph.py
src/memory/: __init__.py
src/react/: graph.py
src/retriever/: configuration.py  graph.py  retriever.py  state.py
src/service/: service.py
src/simple/: graph.py
src/thinking/: graph.py
src/tools/: browser.py  markdown.py  sandbox.py  uv_script.py
src/zerocode/: __init__.py  cli.py  configuration.py  graph.py  state.py
src/zerocode/agent/: graph.py  state.py  utils.py
src/zerocode/context/: chroma.py  rerank.py
src/zerocode/indexer/: configuration.py  graph.py  state.py
src/zerocode/retriever/: graph.py  state.py
