[project]
name = "zerocode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Manoj Bajaj", email = "manoj@zetsy.dev" }
]
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.6.3",
    "datasets>=3.3.2",
    "langchain-anthropic>=0.3.7",
    "langchain-chroma>=0.2.2",
    "langchain-cohere>=0.4.2",
    "langchain-elasticsearch>=0.3.2",
    "langchain-mcp-adapters>=0.0.2",
    "langchain-mongodb>=0.4.0",
    "langchain-openai>=0.3.6",
    "langchain-pinecone>=0.2.3",
    "langgraph>=0.2.74",
    "langsmith>=0.3.10",
    "litellm>=1.61.13",
    "loguru>=0.7.3",
    "rich>=13.9.4",
    "tavily-python>=0.5.1",
    "typer>=0.15.1",
]

[project.scripts]
zerocode = "zerocode:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
lint = [
    "ruff>=0.9.7",
]
